--- a/config.json
+++ b/config.json
@@ -1,4 +1,10 @@
-{
-  "attr1":"value1",
-  "attr2":"value2"
-}
+[
+  {
+    "selector":"#div1",
+    "html":"`texte div1`"
+  },
+  {
+    "selector":"#div2",
+    "html":"`texte div2`"
+  },
+]
