--- a/config.json
+++ b/config.json
@@ -1,10 +1,10 @@
 [
   {
     "selector":"#div1",
-    "html":"`texte div1`"
+    "html":"texte div1"
   },
   {
     "selector":"#div2",
-    "html":"`texte div2`"
-  },
+    "html":"texte div2"
+  }
 ]
