--- a/config.json
+++ b/config.json
@@ -1,11 +1,3 @@
 {
-  "injection": [{
-      "selector": "#div1",
-      "html": "texte div1"
-    },
-    {
-      "selector": "#div2",
-      "html": "texte div2"
-    }
-  ]
+  "injection": []
 }
